@@ -6,7 +6,6 @@ import com.jobshunter.database.repository.UserJobRepository;
 import com.jobshunter.database.repository.UserRepository;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -46,7 +45,7 @@ public class UserDataService {
         .filter(StringUtils::hasText)
         .map(String::trim)
         .distinct()
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
